# ModbusSim

./: .gitignore  CHANGELOG.md  Cargo.toml  GuardedDevice_TestReport.md  README.md  README_CN.md  package-lock.json  package.json
.claude/: CLAUDE.md
.github/workflows/: ci-egui.yml  release.yml
crates/modbusmaster-app/: Cargo.toml  tauri.conf.json
crates/modbusmaster-app/capabilities/: default.json
crates/modbusmaster-app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/modbusmaster-egui/: Cargo.toml
crates/modbusmaster-egui/src/: app.rs  events.rs  main.rs  result_table.rs  scan_group.rs
crates/modbussim-app/: Cargo.toml  tauri.conf.json
crates/modbussim-app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/modbussim-core/: Cargo.toml
crates/modbussim-core/examples/: run_slave.rs  test_e2e.rs  test_master.rs  test_slave5020.rs
crates/modbussim-core/src/: ascii_master.rs  ascii_slave.rs  config.rs  data_source.rs  error.rs  frame.rs  jitter.rs  lib.rs  log_collector.rs  log_entry.rs  log_helpers.rs  master.rs  mbap.rs  parse.rs  pdu.rs  project.rs  reconnect.rs  register.rs  rtu_master.rs  rtu_slave.rs  rtu_tcp_master.rs  rtu_tcp_slave.rs  slave.rs  tls_master.rs  tls_slave.rs  tools.rs  transport.rs
crates/modbussim-core/tests/: e2e_flow.rs  master_integration.rs  random_mutation.rs  slave_integration.rs  tls_e2e.rs
crates/modbussim-egui/: Cargo.toml
crates/modbussim-egui/src/: app.rs  main.rs
crates/modbussim-ui-shared/: Cargo.toml
crates/modbussim-ui-shared/src/: fonts.rs  format.rs  hero_anim.rs  i18n.rs  lib.rs  log_panel.rs  project.rs  theme.rs  ui.rs  value_panel.rs
docs/releases/: v0.14.0.md  v0.14.1.md
docs/superpowers/plans/: 2026-04-05-phase1-architecture-foundation.md  2026-04-05-phase2-protocol-transport.md  2026-04-06-phase3-experience-enhancement.md  2026-04-07-modbus-tls.md  2026-04-20-egui-slave-jitter.md  2026-04-21-conn-status-feedback.md  2026-04-21-slave-ui-redesign.md  2026-04-22-slave-welcome-hero.md  2026-05-01-bilingual-i18n.md
docs/superpowers/specs/: 2026-04-05-modbus-master-slave-improvements-design.md  2026-04-07-modbus-tls-design.md  2026-04-20-egui-slave-jitter-design.md  2026-04-21-conn-status-feedback-design.md  2026-04-21-slave-ui-redesign-design.md  2026-04-22-slave-welcome-hero-dancing-strings-design.md  2026-05-01-bilingual-i18n-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AppDialog.vue  BatchAddModal.vue  ConnectionTree.vue  LogPanel.vue  MutationControl.vue  NewConnectionDialog.vue  NewSlaveDialog.vue  RegisterModal.vue  RegisterTable.vue  Toolbar.vue  ToolsView.vue  ValuePanel.vue
frontend/src/composables/: useDialog.ts  useRegisterFormat.ts  useRegisterValues.ts
master-frontend/: index.html  package-lock.json  package.json
master-frontend/src/: App.vue  types.ts
master-frontend/src/components/: ConnectionTree.vue  DataTable.vue  LogPanel.vue  NewConnectionDialog.vue  NewScanGroupDialog.vue  ScanDialog.vue  Toolbar.vue  ValuePanel.vue  WriteDialog.vue
openspec/changes/archive/2026-03-26-modbus-simulator/: design.md  tasks.md
openspec/changes/archive/2026-03-28-slave-focus/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-slave-focus/specs/slave-mode/: spec.md
openspec/changes/archive/2026-03-29-register-table-enhance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-bool-view-and-button-polish/: design.md  proposal.md
openspec/changes/archive/2026-04-20-visual-flat-layered-v2/: tasks.md
openspec/changes/bool-view-and-button-polish/: tasks.md
openspec/changes/egui-033-shadcn-migration/: design.md  proposal.md  tasks.md
openspec/changes/egui-033-shadcn-migration/specs/egui-visual-style/: spec.md
openspec/changes/egui-033-shadcn-migration/specs/shadcn-components/: spec.md
openspec/changes/improved-slave-register-ui/: design.md  proposal.md  tasks.md
openspec/changes/improved-slave-register-ui/specs/slave-register-ui/: spec.md
openspec/changes/modbus-simulator/: proposal.md  tasks.md
openspec/changes/modbus-simulator/specs/modbus-tools/: spec.md
openspec/changes/slave-ui-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/slave-ui-overhaul/specs/auto-default-slave/: spec.md
openspec/changes/slave-ui-overhaul/specs/connection-tree/: spec.md
openspec/changes/slave-ui-overhaul/specs/slave-mode/: spec.md
openspec/changes/slave-ui-overhaul/specs/toolbar/: spec.md
openspec/changes/slave-ui-overhaul/specs/value-panel/: spec.md
openspec/changes/value-panel-writeback/: design.md  proposal.md  tasks.md
openspec/changes/value-panel-writeback/specs/register-refresh/: spec.md
openspec/changes/value-panel-writeback/specs/value-writeback/: spec.md
openspec/changes/visual-flat-layered-v2/: design.md  proposal.md  tasks.md
openspec/specs/egui-register-search/: spec.md
openspec/specs/egui-visual-style/: spec.md
shared-frontend/: package.json  vitest.config.ts
shared-frontend/src/: index.ts
shared-frontend/src/components/: AppDialog.vue  LangToggle.vue  LogPanelShell.vue
shared-frontend/src/composables/: useAddressFormat.ts  useDialog.ts  useErrorHandler.ts  useFcLabel.ts  useLogFilter.ts  useLogPanel.ts  useValueFormat.ts
shared-frontend/src/i18n/: detect.ts  index.ts  types.ts
shared-frontend/src/i18n/locales/: en-US.ts  zh-CN.ts
shared-frontend/src/types/: modbus.ts
shared-frontend/tests/: detect.spec.ts  useI18n.spec.ts
(+14 files in other folders)
