[package]
name = "modbussim-app"
version = "0.1.0"
description = "ModbusSim - Cross-platform Modbus Simulator"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "modbussim_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
modbussim-core = { path = "../modbussim-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
