[package]
name = "modbussim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-modbus = { version = "0.15", features = ["tcp-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
