[package]
name = "modbussim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-modbus = { version = "0.15", features = ["tcp-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
rand = "0.8"
serialport = "4"
tokio-serial = "5.4"
native-tls = "0.2"
tokio-native-tls = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
rcgen = "0.13"
# vendored: 编译 OpenSSL 源码，避免 Windows MSVC CI 上找不到系统 OpenSSL
openssl = { version = "0.10", features = ["vendored"] }
